--- a/Receiver/Debug/makefile
+++ b/Receiver/Debug/makefile
@@ -61,7 +61,7 @@ main-build: Receiver.elf secondary-outputs
 
 # Tool invocations
 Receiver.elf Receiver.map: $(OBJS) $(USER_OBJS) D:\AGH\inzynierka\Wheater-Station\Receiver\STM32F429ZITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Receiver.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\AGH\inzynierka\Wheater-Station\Receiver\STM32F429ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Receiver.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "Receiver.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\AGH\inzynierka\Wheater-Station\Receiver\STM32F429ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Receiver.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -u _scanf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
